{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "43458f67-89a8-467d-9692-ac9c298d6911",
            "actions": [
                {
                    "name": "ButtonQ",
                    "type": "Button",
                    "id": "c9e5c849-4839-40d1-a1a2-3046bb3581d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonE",
                    "type": "Button",
                    "id": "2004f1ea-3388-49c4-8ab9-f2118f614cfb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeft",
                    "type": "Button",
                    "id": "31354a6c-10da-4b37-bd39-d0848afa39ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRight",
                    "type": "Button",
                    "id": "3d6c3363-4ea0-4e9d-adba-a8c3f9ccc3c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a346a6be-24ae-46d8-bc96-be957a8997bb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "ButtonQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a3d1fe5-d8ad-4dc3-90cf-41c889f1b29a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "ButtonE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1037a343-e450-4e51-a6c2-2f76991d6152",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "641eb0b1-f01f-4a8f-9e4f-fb3f4df829be",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "MouseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard+Mouse",
            "bindingGroup": "Keyboard+Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}